# ziply

./: .example.env  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  model.rs  utils.rs
src/client/: README.md  package-lock.json
src/client/public/: index.html
src/client/src/: App.css  App.js
src/routes/: mod.rs  route.rs
